--- a/client/partials/edit.html
+++ b/client/partials/edit.html
@@ -1,8 +1,9 @@
-<h1>Edit</h1>
-<form ng-submit='editFriend()'>
-	<p>First Name: <input type="text" mg-model='newFriend.first_name'></p>
-	<p>Last Name: <input type="text" mg-model='newFriend.last_name'></p>
-	<p>Hometown: <input type="text" mg-model='newFriend.hometown'></p>
-	<p>Birthday: <input type="text" mg-model='newFriend.birthday'></p>
+<a href="#/">All Friends</a>
+<h1>Edit Friend</h1>
+<form ng-submit='update()'>
+	<p>First Name: <input type="text" ng-model="friend.first_name"></p>
+	<p>Last Name: <input type="text" ng-model='friend.last_name'></p>
+	<p>Hometown: <input type="text" ng-model='friend.hometown'></p>
+	<p>Birthday: <input type="text" ng-model='friend.birthday'></p>
 	<input type="submit" value="Edit Friend">
 </form>
