--- a/client/partials/new.html
+++ b/client/partials/new.html
@@ -1,8 +1,9 @@
-<h1>New</h1>
-<form ng-submit='createFriend()'>
-	<p>First Name: <input type="text" mg-model='newFriend.first_name'></p>
-	<p>Last Name: <input type="text" mg-model='newFriend.last_name'></p>
-	<p>Hometown: <input type="text" mg-model='newFriend.hometown'></p>
-	<p>Birthday: <input type="text" mg-model='newFriend.birthday'></p>
+<a href="#/">All Friends</a>
+<h1>Add A Friend</h1>
+<form ng-submit='create()'>
+	<p>First Name: <input type="text" ng-model='newFriend.first_name'></p>
+	<p>Last Name: <input type="text" ng-model='newFriend.last_name'></p>
+	<p>Hometown: <input type="text" ng-model='newFriend.hometown'></p>
+	<p>Birthday: <input type="text" ng-model='newFriend.birthday'></p>
 	<input type="submit" value="Add Friend">
 </form>
