Added CRUD functionality to the back end. Everything is working.

--- a/client/partials/main.html
+++ b/client/partials/main.html
@@ -3,16 +3,18 @@
 <table>
 	<tr>
 		<th>Name</th>
+		<th>Hometown</th>
 		<th>Show</th>
 		<th>Update</th>
 		<th>Delete</th>
 	</tr>
 	<tr ng-repeat='friend in friends track by $index'>
 		<td>{{ friend.first_name }} {{ friend.last_name }}</td>
-		<td><a href="#/show/{{ $index }}">show</a></td>
-		<td><a href="#/{{ $index }}/edit">edit</a></td>
+		<td>{{ friend.hometown }}</td>
+		<td><a href="#/show/{{ friend._id }}">show</a></td>
+		<td><a href="#/{{ friend._id }}/edit">edit</a></td>
 		<td>
-			<form ng-submit='delete($index)'>
+			<form ng-submit='delete( friend._id )'>
 				<input type="submit" value='Delete'>
 			</form>
 		</td>
