--- a/client/partials/show.html
+++ b/client/partials/show.html
@@ -1,6 +1,4 @@
 <a href="#/">All Friends</a>
-<h1>Show Friend</h1>
-<p>First Name: {{ friend.first_name }}</p>
-<p>Last Name: {{ friend.last_name }}</p>
+<h1>{{ friend.first_name }} {{ friend.last_name }}</h1>
 <p>Hometown: {{ friend.hometown }}</p>
 <p>Birthday: {{ friend.birthday }}</p>
