Added Date SchemaType and data inputs.

--- a/client/partials/new.html
+++ b/client/partials/new.html
@@ -4,6 +4,6 @@
 	<p>First Name: <input type="text" ng-model='newFriend.first_name'></p>
 	<p>Last Name: <input type="text" ng-model='newFriend.last_name'></p>
 	<p>Hometown: <input type="text" ng-model='newFriend.hometown'></p>
-	<p>Birthday: <input type="text" ng-model='newFriend.birthday'></p>
+	<p>Birthday: <input type="date" ng-model='newFriend.birthday'></p>
 	<input type="submit" value="Add Friend">
 </form>
