--- a/client/partials/show.html
+++ b/client/partials/show.html
@@ -1,4 +1,4 @@
 <a href="#/">All Friends</a>
 <h1>{{ friend.first_name }} {{ friend.last_name }}</h1>
 <p>Hometown: {{ friend.hometown }}</p>
-<p>Birthday: {{ friend.birthday }}</p>
+<p>Birthday: {{ friend.birthday | date: "MM-dd-yyyy"}}</p>
