--- a/client/partials/edit.html
+++ b/client/partials/edit.html
@@ -4,6 +4,6 @@
 	<p>First Name: <input type="text" ng-model="friend.first_name"></p>
 	<p>Last Name: <input type="text" ng-model='friend.last_name'></p>
 	<p>Hometown: <input type="text" ng-model='friend.hometown'></p>
-	<p>Birthday: <input type="text" ng-model='friend.birthday'></p>
+	<p>Birthday: <input type="date" ng-model='friend.birthday'></p>
 	<input type="submit" value="Edit Friend">
 </form>
